@@ -13,11 +13,12 @@ The simplest way to use it to add a part in ``buildout.cfg`` like this:
     ... """)
 
 Running the buildout adds a ``bin/backup`` and ``bin/snapshotbackup`` script
-and, by default, the ``var/backups`` dir:
+and, by default, the ``var/backups`` and ``var/snapshotbackups`` dir:
 
     >>> print system(buildout) # doctest:+ELLIPSIS
     Installing backup.
     backup: Created /sample-buildout/var/backups
+    backup: Created /sample-buildout/var/snapshotbackups
     Getting distribution for 'zc.recipe.egg'.
     Got zc.recipe.egg 1.0.0.
     Generated script '/sample-buildout/bin/backup'.
@@ -25,6 +26,7 @@ and, by default, the ``var/backups`` dir:
     <BLANKLINE>
     >>> ls('var')
     d  backups
+    d  snapshotbackups
     >>> ls('bin')
     -  backup
     -  buildout
@@ -45,6 +47,17 @@ By default, backups are done in ``var/backups``:
     >>> print system('bin/backup')
     --backup -f /sample-buildout/var/filestorage/Data.fs -r /sample-buildout/var/backups
     INFO: Backing up database file: ...
+
+For quickly grabbing the current state of a production database so you can
+download it to your development laptop, you want a full backup. But
+you shouldn't interfere with the regular backup regime. Likewise, a quick
+backup just before updating the production server is a good idea. For that,
+the ``bin/snapshotbackup`` is great. It places a full backup in, by default,
+``var/snapshotbackups``.
+
+    >>> print system('bin/snapshotbackup')
+    --backup -f /sample-buildout/var/filestorage/Data.fs -r /sample-buildout/var/snapshotbackups -F
+    INFO: Making snapshot backup:...
 
 
 Supported options
@@ -74,6 +87,10 @@ debug
     In rare cases when you want to know exactly what's going on, set debug to
     'true' to get debug level logging.
 
+snapshotlocation
+    Location where snapshot defaults are stored. Defaults to
+    ``var/snapshotbackups`` inside the buildout directory.
+
 We'll use the three options.
 
     >>> write('buildout.cfg',
@@ -88,10 +105,12 @@ We'll use the three options.
     ... datafs = subfolder/myproject.fs
     ... full = true
     ... debug = true
+    ... snapshotlocation = snap/my
     ... """)
     >>> print system(buildout) # doctest:+ELLIPSIS
     Uninstalling backup.
     Installing backup.
+    backup: Created /sample-buildout/snap/my
     Generated script '/sample-buildout/bin/backup'.
     Generated script '/sample-buildout/bin/snapshotbackup'.
     <BLANKLINE>
@@ -102,3 +121,9 @@ handled correctly despite being a relative link:
     >>> print system('bin/backup')
     --backup -f /sample-buildout/subfolder/myproject.fs -r /backups/myproject -F
     INFO: Backing up database file: ...
+
+The same is true for the snapshot backup.
+
+    >>> print system('bin/snapshotbackup')
+    --backup -f /sample-buildout/subfolder/myproject.fs -r /sample-buildout/snap/my -F
+    INFO: Making snapshot backup:...
