@@ -1,3 +1,1 @@
 * Add restore script.
-
-* Add snapshot backups.
