@@ -1,6 +1,8 @@
 0.1 (unreleased)
 ----------------
 
+- Added snapshot backups. [reinout]
+
 - Enabled cleaning up of older backups. [reinout]
 
 - First working version that runs repozo and that creates a backup dir if
